syntax = "proto3";

option go_package = "internal/proto";

import "google/protobuf/wrappers.proto";

message FindUserURLsRequest {
  google.protobuf.StringValue user_id = 1;
}